Don't count hidden files in folder item count

Summary:
Add a field "Hidden items" to display the number of hidden items, allowing the user to show or hide it.

FIXED-IN: 19.12
BUG: 412396

Reviewers: ngraham, bruns, elvisangelaccio

Reviewed By: ngraham, elvisangelaccio

Subscribers: alexde, elvisangelaccio, cfeck, #baloo

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D24362